--- a/package.json
+++ b/package.json
@@ -181,5 +181,8 @@
   "create-react-native-library": {
     "type": "library",
     "version": "0.41.2"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0"
   }
 }
